- Added Kotlin support to the project while streamlining dependencies as much as possible.

--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -11,6 +11,8 @@
  */
 
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     signingConfigs {
@@ -33,16 +35,19 @@ android {
     compileSdkVersion 29
     buildToolsVersion '29.0.2'
     compileOptions {
-        targetCompatibility = "8"
-        sourceCompatibility = "8"
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
-
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
     defaultConfig {
         applicationId 'pt.unl.fct.di.novalincs.yanux.scavenger'
         minSdkVersion 23
         targetSdkVersion 29
         versionCode 1
         versionName '1.0'
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         signingConfig signingConfigs.release
         // Enabling multidex support.
         multiDexEnabled true
@@ -71,8 +76,9 @@ dependencies {
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'com.google.android.material:material:1.2.0-alpha02'
     implementation 'com.google.android.gms:play-services-nearby:17.0.0'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.2.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     wearApp project(':wear')
 }
