--- a/common/build.gradle
+++ b/common/build.gradle
@@ -11,15 +11,16 @@
  */
 
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
     buildToolsVersion '29.0.2'
     compileOptions {
-        targetCompatibility = "8"
-        sourceCompatibility = "8"
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
     }
-
     defaultConfig {
         minSdkVersion 23
         targetSdkVersion 29
@@ -36,7 +37,9 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    api "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     api 'androidx.appcompat:appcompat:1.1.0'
+    api 'androidx.core:core-ktx:1.1.0'
     api 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
     api 'org.apache.commons:commons-lang3:3.9'
     api 'com.fasterxml.jackson.core:jackson-core:2.10.1'
@@ -61,5 +64,7 @@ dependencies {
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.10.7'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.10.7'
     api 'org.altbeacon:android-beacon-library:2.16.3'
-    testImplementation('junit:junit:4.12')
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
