--- a/mobile/src/main/AndroidManifest.xml
+++ b/mobile/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?><!--
+<?xml version="1.0" encoding="utf-8"?>
+<!--
   ~ Copyright (c) 2019 Pedro Albuquerque Santos.
   ~
   ~ This file is part of YanuX Scavenger.
@@ -19,7 +20,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".activity.KotlinActivity"></activity>
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name"
@@ -41,7 +42,6 @@
                     android:scheme="yanux" />
             </intent-filter>
         </activity>
-
         <activity
             android:name=".activity.audio.AudioActivity"
             android:label="@string/title_activity_audio"
@@ -50,7 +50,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.beacons.BeaconsActivity"
             android:label="@string/title_activity_beacons"
@@ -59,7 +58,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.bluetooth.BluetoothClassicActivity"
             android:label="@string/title_activity_bluetooth_classic"
@@ -68,7 +66,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.bluetooth.BluetoothLeActivity"
             android:label="@string/title_activity_bluetooth_le"
@@ -77,7 +74,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.nearby.NearbyConnectionsActivity"
             android:label="@string/title_activity_nearby_messages"
@@ -86,7 +82,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.nearby.NearbyMessagesActivity"
             android:label="@string/title_activity_nearby_messages"
@@ -95,7 +90,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.sensors.SensorsActivity"
             android:label="@string/title_activity_sensors"
@@ -104,7 +98,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.wifi.WifiActivity"
             android:label="@string/title_activity_wifi"
@@ -113,7 +106,6 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activity.MainActivity" />
         </activity>
-
         <activity
             android:name=".activity.preferences.PreferencesActivity"
             android:label="@string/title_activity_preferences"
