--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -81,4 +81,5 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     wearApp project(':wear')
+    implementation 'com.google.android.gms:play-services-wearable:17.0.0'
 }
