--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -75,7 +75,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.preference:preference:1.1.0'
-    implementation 'com.google.android.material:material:1.2.0-alpha04'
+    implementation 'com.google.android.material:material:1.1.0'
     implementation 'com.google.android.gms:play-services-nearby:17.0.0'
     implementation 'com.google.android.gms:play-services-wearable:17.0.0'
     testImplementation 'junit:junit:4.13'
