--- a/common/build.gradle
+++ b/common/build.gradle
@@ -50,7 +50,7 @@ dependencies {
     api 'com.fasterxml.jackson.core:jackson-databind:2.10.3'
     api 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.10.3'
     api 'com.googlecode.json-simple:json-simple:1.1.1'
-    api 'com.squareup.okhttp3:okhttp:4.4.1'
+    api 'com.squareup.okhttp3:okhttp:4.5.0'
     api 'org.nanohttpd:nanohttpd-webserver:2.3.1'
     api 'io.jsonwebtoken:jjwt-api:0.11.1'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.1'
@@ -60,9 +60,9 @@ dependencies {
         exclude group: 'org.json', module: 'json'
     }
     api 'org.altbeacon:android-beacon-library:2.16.4'
-    api 'org.bouncycastle:bcpkix-jdk15on:1.64'
+    api 'org.bouncycastle:bcpkix-jdk15on:1.65'
     //This is needed for the project to compile with Bouncy Castle instead of with Spongy Castle
-    implementation('junit:junit') { version { strictly '4.13' } }
+    implementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
