--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion '29.0.3'
+    buildToolsVersion '30.0.0'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -27,6 +27,7 @@ android {
     defaultConfig {
         applicationId "pt.unl.fct.di.novalincs.yanux.scavenger"
         minSdkVersion 25
+        //TODO: Target SDK 30 after replacing legacy storage model
         targetSdkVersion 29
         versionCode 1
         versionName '1.0'
