--- a/common/build.gradle
+++ b/common/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     api 'com.squareup.okhttp3:okhttp:4.7.2'
     api 'org.nanohttpd:nanohttpd-webserver:2.3.1'
     api 'io.jsonwebtoken:jjwt-api:0.11.2'
+    implementation 'androidx.documentfile:documentfile:1.0.1'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
     api 'com.auth0:jwks-rsa:0.11.0'
