--- a/common/build.gradle
+++ b/common/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 29
-    buildToolsVersion '30.0.0'
+    buildToolsVersion '30.0.1'
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
@@ -45,26 +45,26 @@ dependencies {
     api 'androidx.appcompat:appcompat:1.1.0'
     api 'androidx.core:core-ktx:1.3.0'
     api 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+    api 'androidx.documentfile:documentfile:1.0.1'
     api 'org.apache.commons:commons-lang3:3.10'
-    api 'com.fasterxml.jackson.core:jackson-core:2.11.0'
-    api 'com.fasterxml.jackson.core:jackson-annotations:2.11.0'
-    api 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
-    api 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.11.0'
+    api 'com.fasterxml.jackson.core:jackson-core:2.11.1'
+    api 'com.fasterxml.jackson.core:jackson-annotations:2.11.1'
+    api 'com.fasterxml.jackson.core:jackson-databind:2.11.1'
+    api 'com.fasterxml.jackson.datatype:jackson-datatype-json-org:2.11.1'
     api 'com.googlecode.json-simple:json-simple:1.1.1'
-    api 'com.squareup.okhttp3:okhttp:4.7.2'
+    api 'com.squareup.okhttp3:okhttp:4.8.0'
     api 'org.nanohttpd:nanohttpd-webserver:2.3.1'
     api 'io.jsonwebtoken:jjwt-api:0.11.2'
-    implementation 'androidx.documentfile:documentfile:1.0.1'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.2'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.2'
-    api 'com.auth0:jwks-rsa:0.11.0'
+    api 'com.auth0:jwks-rsa:0.12.0'
     api('io.socket:socket.io-client:1.0.0') {
         // excluding org.json which is provided by Android
         exclude group: 'org.json', module: 'json'
     }
     api 'org.altbeacon:android-beacon-library:2.17.1'
     //Bouncy Castle should no longer be needed, unless I need to support PS256, PS384 and PS512 signatures.
-    api 'org.bouncycastle:bcpkix-jdk15on:1.65'
+    api 'org.bouncycastle:bcprov-jdk15to18:1.66'
     //This is needed for the project to compile with Bouncy Castle instead of with Spongy Castle
     implementation 'junit:junit:4.13'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
