--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -25,6 +25,7 @@ android {
     }
     kotlinOptions {
         jvmTarget = "1.8"
+        useIR = true
     }
     buildFeatures {
         viewBinding true
